--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -84,7 +84,74 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-
+.bg-gradient-overlay:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(135deg, #7368d3, #71ACF7);
+    background-image: linear-gradient(135deg, rgb(115, 104, 211), rgb(113, 172, 247));
+    background-position-x: initial;
+    background-position-y: initial;
+    background-size: initial;
+    background-repeat-x: initial;
+    background-repeat-y: initial;
+    background-attachment: initial;
+    background-origin: initial;
+    background-clip: initial;
+    background-color: initial;
+    opacity: .35;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+.no-gutters {
+    margin-right: 0;
+    margin-left: 0;
+}
+.justify-content-sm-center {
+    justify-content: center !important;
+}
+.justify-content-md-start {
+    justify-content: flex-start !important;
+}
+.row-40 {
+    margin-bottom: -40px;
+}
+.row-sm-0 {
+    margin-bottom: 0px;
+}
+.icon-box {
+    padding: 67px 37px 61px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.icon-box.icon-box-top-line:before {
+    border-width: 1px 0 0 0;
+}
+.icon-box .box-top {
+    top: 0;
+}
+.col-md-4 {
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+}
+.height-fill {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+}
 hr {
   margin: 1rem 0;
   color: inherit;
